--- a/FILTERS.ipynb
+++ b/FILTERS.ipynb
@@ -6,10 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The very first thing is making  data frame bt before that let;s specify some parameters\n",
+    "# The very first thing is making  data frame but before that let's specify some parameters\n",
     "\n",
-    "# our Sample rate is 1 that is simply put 1 smaple per second\n",
-    "# The Measuring error of our device is let's say 1% of the measured value\n",
+    "# our Sample rate is 1 that is simply put 1 sample per second\n",
+    "# The Measuring error of our device is 1% of the measured value\n",
     "# The actual value is 75"
    ]
   },
@@ -20,7 +20,7 @@
    "outputs": [],
    "source": [
     "#now with all the parameters specified let's start getting a dataframe\n",
-    "# we assume that our sensor generates a dataframe every second so with our smaple rate of 1 that gives us \n",
+    "# we assume that our sensor generates a dataframe every minute so with our smaple rate of 1 that gives us \n",
     "# a list of 60 measured values in a single frame\n",
     "\n",
     "#assuming our Measured data is in range (72,78)\n",
